Add Logger Changed the Config little Config still not working